gap fixed

--- a/intro/css/css-flexbox-grid.css
+++ b/intro/css/css-flexbox-grid.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
     height: 100vh;
-    gap: 10px 10px;
+    gap: 10px;
   
   }
   
@@ -16,6 +16,7 @@
   main {
     display: flex;
     flex-direction: row;
+    gap: 10px;
   }
   
   .main-content {
